--- a/overview-text.html
+++ b/overview-text.html
@@ -105,13 +105,13 @@
           talks, a Public Lecture, and group discussions by young researchers
           with experts in all areas of Pure and Applied Mathematics.
         </h5>
-        <h1 class="p-0 mt-2 serch-hd1">CHRIST (deemed to be University)</h1>
+        <h1 class="p-0 mt-2 serch-hd1">CHRIST (Deemed to be University)</h1>
         <h5 class="p-0 mt-2 abot-txt-innr">
-          CHRIST (deemed to be University) was born out of the educational
-          vision of St Kuriakose Elias Chavara, an educationist and social
+          CHRIST (Deemed to be University) was born out of the educational
+          vision of St. Kuriakose Elias Chavara, an educationist and social
           reformer of the nineteenth century in South India. He founded the
           first Catholic indigenous congregation, Carmelites of Mary Immaculate
-          (CMI), in 1831, which administers CHRIST (deemed to be University).
+          (CMI), in 1831, which administers CHRIST (Deemed to be University).
           Established in 1969 as Christ College, it undertook path-breaking
           initiatives in Indian higher education with the introduction of
           innovative and modern curricula, insistence on academic discipline,
@@ -121,12 +121,11 @@
           Christ College in 2004 and identified it as an Institution with
           Potential for Excellence in 2006. In 2008 under Section 3 of the UGC
           Act, 1956, the Ministry of Human Resource Development of the
-          Government of India, declared the institution a DEEMED TO BE
-          UNIVERSITY, in the name and style of Christ University. One of the
-          first institutions in India to be accredited in 1998 by the National
-          Assessment and Accreditation Council (NAAC), Government of India, and
-          subsequently in 2004, 2016, 2022 CHRIST (deemed to be University) is
-          currently accredited with ‘A+’ Grade.
+          Government of India, declared the institution a Deemed to be
+          University. One of the first institutions in India to be accredited 
+          in 1998 by the National Assessment and Accreditation Council (NAAC), 
+          Government of India, and subsequently in 2004, 2016, 2022. CHRIST
+          (deemed to be University) is currently accredited with ‘A+’ Grade.
         </h5>
         <h5 class="p-0 mt-2 abot-txt-innr">
           The multi-disciplinary University which focuses on teaching, research
@@ -134,7 +133,7 @@
           humanities, social sciences, sciences, commerce, management,
           engineering, architecture, education, and law to about 30000 students.
           The University offers its programmes at four campus locations in
-          Bangalore in Karnataka, at Lavasa in Pune in Maharashtra, and
+          Bangalore in Karnataka, at Lavasa, Pune in Maharashtra, and
           Ghaziabad in Delhi NCR. The campus is a living example of harmonious
           multiculturalism with students from all the states and union
           territories and around 60 different countries. A promoter of sports,
@@ -147,7 +146,7 @@
         <h5 class="p-0 mt-2 abot-txt-innr">
           Since its inception in 2010, the department of Sciences and Humanities
           aims at fostering curiosity for science among the engineering students
-          of CHRIST (deemed to be University) and help them to understand
+          of CHRIST (Deemed to be University) and help them to understand
           fundamentals of Chemistry, Physics, Mathematics, English and Soft
           Skills. The department has well qualified staff having research
           experience and international exposure. Well-equipped laboratories are
