--- a/contact-text.html
+++ b/contact-text.html
@@ -75,7 +75,7 @@
         </b>
       </div>
       <br />
-      <h3 class="text-center">POINT OF CONTACT</h3>
+      <h3 class="text-center">For any assistance contact </h3>
       <br />
       <div
         class="contact_disp"
